# ampdLib

./: .coverage  .gitignore  LICENSE  README.md  __init__.py  ampdLib.py  pyproject.toml
ampdlib/: __init__.py  ampdlib.py
ampdlib/tests/: test.py
tests/: data.mat  test.py
