[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "ampdLib"
version = "1.1.3"
description = "Implementation of AMPD algorithm for peak detection in quasi-periodic signals"
dependencies = [
    "numpy"
]

[metadata]
author = "LucaCerina"
author_email = "lccerina@gmail.com"
license = "Apache-2.0"